[package]
name = "http-types-rs"
version = "4.0.4"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OneOfone/http-types"
documentation = "https://docs.rs/http-types-rs"
description = "Common types for HTTP operations."
keywords = ["http", "types", "request", "response", "h2"]
categories = [
	"asynchronous",
	"web-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]
authors = [
	"Yoshua Wuyts <yoshuawuyts@gmail.com>",
	"Ahmed Mones <oneofone@gmail.com>",
]
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = ["fs", "cookies", "serde"]
docs = ["unstable"]
unstable = []
hyperium_http = ["dep:http"]
cookies = ["dep:cookie"]
fs = ["dep:async-std"]
serde = [
	"dep:serde_qs",
	"dep:serde",
	"dep:serde_json",
	"dep:serde_urlencoded",
	"url/serde",
]

[dependencies]
fastrand = "2.0"
base64 = "0.22"
futures = "0.3"
async-channel = "2.2"
infer = "0.15"
pin-project-lite = "0.2"
url = "2.5"
anyhow = "1.0"

# features: async_std
async-std = { version = "1.12", optional = true }

# features: hyperium/http
http = { version = "1.1", optional = true }

# features: cookies
cookie = { version = "0.18", features = ["percent-encode", "secure"], optional = true }

# features: serde
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = [
	"derive",
], optional = true, package = "serde" }
serde_urlencoded = { version = "0.7", optional = true }
serde_qs = { version = "0.13", optional = true }


[dev-dependencies]
http = "1.1"
async-std = { version = "1.12", features = ["attributes"] }
